# llm_evaluation

./: pyproject.toml
dataset/: math.json  summarization.json
notebooks/: 01_experiments.ipynb
src/: evaluator.py  main.py  model.py  ollama_client.py
