[project]
name = "llm-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.1",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "requests>=2.32.4",
    "jupyter>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
